--- a/index.html
+++ b/index.html
@@ -1,3 +1,12 @@
 <html>
+<head>
+  <style class="text/css">
+    body {
+      background-color: green;
+    }
+  </style>
+</head>
+<body>
  <h1>Bonjour</h1>
+</body>
 </html>
