--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <head>
   <style class="text/css">
     body {
-      background-color: red;
+      background-color: yellow;
     }
   </style>
 </head>
